tests/rename/should_fail/T9077.hs
module T9077 where

main :: IO {}
main = print "hello"
